--- a/blog/templates/blog/article/article.html
+++ b/blog/templates/blog/article/article.html
@@ -7,6 +7,7 @@
 
 
 {% block body %}
+{% include 'general_includes/banner/banner.html' %}
 <section class="blog-detail-wrap bg-light-primary100">
     <div class="container">
         <div class="row">
