--- a/doctor/templates/doctor/doctor_list/includes/search_area.html
+++ b/doctor/templates/doctor/doctor_list/includes/search_area.html
@@ -1,22 +1,27 @@
 <div class="team-search-box">
-    <form action="get">
+    <form action="{% url 'doctor-list' %}" method="get">
         <div class="row">
             <div class="col-xl-4">
                 <div class="form-group">
-                    <select class="select2">
-                        <option value="0">Select Department</option>
+                    <select name="departament" class="select2">
+                            <option value="">Hamısı</option>
+                        {% for departament in departaments %}
+                            <option value="{{ departament.id }}">{{ departament.name }}</option>
+                        {% endfor %}
+
+                        {% comment %} <option value="0">Select Department</option>
                         <option value="1">Cardiology</option>
                         <option value="2">Gastroenterology</option>
                         <option value="3">Neurology</option>
                         <option value="4">Urology</option>
-                        <option value="4">UGC</option>
+                        <option value="4">UGC</option> {% endcomment %}
                     </select>
                 </div>
             </div>
             <div class="col-xl-6">
                 <div class="form-group">
                     <input class="doctor-name form-control" type="text" placeholder="Type Doctor Name Here ..."
-                        name="doctor-name" value="">
+                        name="name" value="">
                 </div>
             </div>
             <div class="col-xl-2">
