--- a/blog/templates/blog/blog/includes/search_area.html
+++ b/blog/templates/blog/blog/includes/search_area.html
@@ -1,11 +1,11 @@
 <div class="widget widget-search">
     <h3 class="section-title title-bar-primary">Search Keywords</h3>
-    <div class="input-group stylish-input-group">
-        <input type="text" class="form-control" placeholder="Search Here . . .">
+    <form class="input-group stylish-input-group" action="{% url 'blog' %}" method="get">
+        <input name="search" type="text" class="form-control" placeholder="Search Here . . .">
         <span class="input-group-addon">
             <button type="submit">
-                <span class="flaticon-search" aria-hidden="true"></span>
+                <span class="flaticon-search" aria-hidden="true" type="submit"></span>
             </button>
         </span>
-    </div>
+    </form>
 </div>
