--- a/blog/templates/blog/blog/includes/category_area.html
+++ b/blog/templates/blog/blog/includes/category_area.html
@@ -1,12 +1,15 @@
 <div class="widget widget-categories">
     <h3 class="section-title title-bar-primary">{{ name }}</h3>
     <ul>
+        <li>
+            <a href="{% url 'blog' %}">Hamısı
+                <span>{{ total_count }}</span>
+            </a>
+        </li>
         {% for category in categories %}
             <li>
                 <a href="{{ category.get_absolute_url }}">{{ category.name }}
-                    {% if show_count %}
-                        <span>{{ category.article_count}}</span>
-                    {% endif %}
+                    <span>{{ category.article_nums}}</span>
                 </a>
             </li>
         {% endfor %}
