--- a/templates/pages/home/home.html
+++ b/templates/pages/home/home.html
@@ -8,9 +8,9 @@
     {% include 'pages/home/includes/slider_area.html' %}
     {% include 'pages/home/includes/action_area.html' %}
     {% include 'pages/home/includes/about_area.html' %}
-    {% include 'pages/home/includes/departaments_area.html' with departaments=departaments %}
-    {% include 'pages/home/includes/doctors_area.html' with doctors=doctors %}
-    {% include 'pages/home/includes/blog_area.html' with articles=articles%}
+    {% include 'pages/home/includes/departaments_area.html' %}
+    {% include 'pages/home/includes/doctors_area.html' %}
+    {% include 'pages/home/includes/blog_area.html' %}
     {% comment %} {% include 'pages/home/includes/featured_area.html' %} {% endcomment %}
 {% endblock body %}
 
